force-app/main/default/objects/Benchmark__c/Benchmark__c.object-meta.xml
<CustomObject>
    <description>Pulls answers submitted on the NDBN Member Benchmark Assessment Questionnaire and calculates benchmarks demonstrated.</description>
    <label>Benchmark Assessment</label>
    <nameField>
        <displayFormat>BA-{0000}</displayFormat>
        <label>BA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Benchmark Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>