force-app/main/default/objects/Benchmark__c/fields/BAQ_Advocacy_Areas_Count__c.field-meta.xml
<CustomField>
    <fullName>BAQ_Advocacy_Areas_Count__c</fullName>
    <inlineHelpText>This field is the number of different types of advocacy areas in which the member has been active. There are 15 choices, not including lobbying (which is its addressed elsewhere).This field feeds formula fields for Exploring and Emerging benchmarks.</inlineHelpText>
    <label>BAQ Advocacy Areas Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>