force-app/main/default/objects/Benchmark__c/fields/BAQ_Date_Submitted__c.field-meta.xml
<CustomField>
    <fullName>BAQ_Date_Submitted__c</fullName>
    <inlineHelpText>Benchmark Assessment Questionnaire Submission Date (will change if the form is reprocessed in FormAssembly)</inlineHelpText>
    <label>BAQ Date Submitted</label>
    <type>Date</type>
</CustomField>