force-app/main/default/objects/Benchmark__c/fields/BAQ_Development_Areas_Count__c.field-meta.xml
<CustomField>
    <fullName>BAQ_Development_Areas_Count__c</fullName>
    <inlineHelpText>This field is the number of different types of development areas in which the member has been active. There are 9 choices, not including product collection.This field feeds formula fields for Exploring and Emerging development benchmarks.</inlineHelpText>
    <label>BAQ Development Areas Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>