force-app/main/default/objects/Benchmark__c/fields/BAQ_URL__c.field-meta.xml
<CustomField>
    <fullName>BAQ_URL__c</fullName>
    <inlineHelpText>Benchmark Assessment Questionnaire in FormAssembly</inlineHelpText>
    <label>BAQ URL</label>
    <type>Url</type>
</CustomField>