force-app/main/default/objects/Benchmark__c/fields/Board_6_or_more_members__c.field-meta.xml
<CustomField>
    <fullName>Board_6_or_more_members__c</fullName>
    <inlineHelpText>1 of 7 criteria to measure shift from working board to governing board (in board benchmark tally)</inlineHelpText>
    <label>Board 6 or more members</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>