force-app/main/default/objects/Benchmark__c/fields/Board_benchmark_tally__c.field-meta.xml
<CustomField>
    <fullName>Board_benchmark_tally__c</fullName>
    <formula>Board_4x_year__c  + 
 Board_conflict_of_interest__c  + 
 Board_gov_and_fin_committees__c  + 
 Board_member_independence__c  + 
 Board_minutes__c  + 
 Board_term_limits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Totals 6 of 7 criteria for benchmarks about governing boards. (Board-6 or more members applies to Sustaining but not Exploring benchmark)</inlineHelpText>
    <label>Board benchmark tally</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>