force-app/main/default/objects/Benchmark__c/fields/Board_member_independence__c.field-meta.xml
<CustomField>
    <fullName>Board_member_independence__c</fullName>
    <inlineHelpText>1 of 7 criteria to measure shift from working board to governing board (in board benchmark tally)</inlineHelpText>
    <label>Board independence</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>