force-app/main/default/objects/Benchmark__c/fields/Ch_A_Community_Rep_ID_Gaps__c.field-meta.xml
<CustomField>
    <fullName>Ch_A_Community_Rep_ID_Gaps__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Actively meet with community representatives to identify gaps in services. (Communities have come to expect diaper need assistance and are guided through strategic collaboration.)</description>
    <inlineHelpText>Actively meet with community representatives to identify gaps in services. (Communities have come to expect diaper need assistance and are guided through strategic collaboration.)</inlineHelpText>
    <label>Ch-A Community Rep ID Gaps</label>
    <type>Checkbox</type>
</CustomField>