force-app/main/default/objects/Benchmark__c/fields/Ch_A_Influence_Policy__c.field-meta.xml
<CustomField>
    <fullName>Ch_A_Influence_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Demonstrated success engaging and influencing decision makers to change governmental policies.</description>
    <inlineHelpText>Demonstrated success engaging and influencing decision makers to change governmental policies.</inlineHelpText>
    <label>Ch-A Influence Policy</label>
    <type>Checkbox</type>
</CustomField>