force-app/main/default/objects/Benchmark__c/fields/Ch_A_NDBN_Brand__c.field-meta.xml
<CustomField>
    <fullName>Ch_A_NDBN_Brand__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Agreement to adhere to use of NDBN brand name, tagline, logo for network communication and any NDBN messaging. In compliance with NDBN&apos;s membership terms to adhere to use of NDBN&apos;s brand. Reports to stakeholders that highlight changes in population-based outcomes link these successes to the organization or program&apos;s affiliation with the National Diaper Bank Network.</description>
    <inlineHelpText>Agreement to adhere to use of NDBN brand name, tagline, logo for network communication and any NDBN messaging. In compliance with NDBN&apos;s membership terms to adhere to use of NDBN&apos;s brand.</inlineHelpText>
    <label>Ch-A NDBN Brand</label>
    <type>Checkbox</type>
</CustomField>