force-app/main/default/objects/Benchmark__c/fields/Ch_ADV_To_Do__c.field-meta.xml
<CustomField>
    <fullName>Ch_ADV_To_Do__c</fullName>
    <description>Number of Change Leader-Level Advocacy Benchmarks (of 3) Not Yet Demonstrated</description>
    <formula>3 - (IF(Ch_A_Community_Rep_ID_Gaps__c, 1, 0) +
IF(Ch_A_Influence_Policy__c, 1, 0) +
IF(Ch_A_NDBN_Brand__c, 1, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of Change Leader-Level Advocacy Benchmarks (of 3) Not Yet Demonstrated</inlineHelpText>
    <label>Ch ADV To-Do (3)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>