force-app/main/default/objects/Benchmark__c/fields/Ch_Bench_To_Do__c.field-meta.xml
<CustomField>
    <fullName>Ch_Bench_To_Do__c</fullName>
    <description>Total Number of Change Leader Benchmarks (of 12) To-Do</description>
    <formula>Ch_GOV_To_Do__c +
Ch_OPS_To_Do__c +
Ch_FUN_To_Do__c +
Ch_ADV_To_Do__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Number of Change Leader Benchmarks (of 12) To-Do</inlineHelpText>
    <label>CHANGE LEADER BENCHMARKS TO-DO (12)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>