force-app/main/default/objects/Benchmark__c/fields/Ch_F_Funding_through_Change__c.field-meta.xml
<CustomField>
    <fullName>Ch_F_Funding_through_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Strategy for funding stability through leadership changes is a part of succession planning.</description>
    <inlineHelpText>Strategy for funding stability through leadership changes is a part of succession planning.</inlineHelpText>
    <label>Ch-F Funding through Change</label>
    <type>Checkbox</type>
</CustomField>