force-app/main/default/objects/Benchmark__c/fields/Ch_F_Multiyear_Funding__c.field-meta.xml
<CustomField>
    <fullName>Ch_F_Multiyear_Funding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Multiple years of demonstrated ability to secure sustainable funding.</description>
    <inlineHelpText>Multiple years of demonstrated ability to secure sustainable funding.</inlineHelpText>
    <label>Ch-F Multiyear Funding</label>
    <type>Checkbox</type>
</CustomField>