force-app/main/default/objects/Benchmark__c/fields/Ch_F_Resources_Aligned__c.field-meta.xml
<CustomField>
    <fullName>Ch_F_Resources_Aligned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Financial and community resources are aligned to improve outcomes.</description>
    <inlineHelpText>Financial and community resources are aligned to improve outcomes.</inlineHelpText>
    <label>Ch-F Resources Aligned</label>
    <type>Checkbox</type>
</CustomField>