force-app/main/default/objects/Benchmark__c/fields/Ch_FUN_To_Do__c.field-meta.xml
<CustomField>
    <fullName>Ch_FUN_To_Do__c</fullName>
    <description>Number of Change Leader-Level Fundraising and Finance Benchmarks (of 3) Not Yet Demonstrated</description>
    <formula>3 - (IF(Ch_F_Funding_through_Change__c, 1, 0) +
IF(Ch_F_Multiyear_Funding__c, 1, 0) +
IF(Ch_F_Resources_Aligned__c, 1, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of Change Leader-Level Fundraising and Finance Benchmarks (of 3) Not Yet Demonstrated</inlineHelpText>
    <label>Ch FUN To-Do (3)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>