force-app/main/default/objects/Benchmark__c/fields/Ch_G_10_years__c.field-meta.xml
<CustomField>
    <fullName>Ch_G_10_years__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Diaper program has been active for 10 years.</description>
    <inlineHelpText>Diaper program has been active for 10 years.</inlineHelpText>
    <label>Ch-G 10 years</label>
    <type>Checkbox</type>
</CustomField>