force-app/main/default/objects/Benchmark__c/fields/Ch_G_Stakeholders_in_Strategic__c.field-meta.xml
<CustomField>
    <fullName>Ch_G_Stakeholders_in_Strategic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A demonstrated process for stakeholder input in strategic planning which considers diversity and inclusiveness across communities in the targeted geographic service area(s).</description>
    <inlineHelpText>A demonstrated process for stakeholder input in strategic planning which considers diversity and inclusiveness across communities in the targeted geographic service area(s).</inlineHelpText>
    <label>Ch-G Stakeholders in Strategic</label>
    <type>Checkbox</type>
</CustomField>