force-app/main/default/objects/Benchmark__c/fields/Ch_G_Succession__c.field-meta.xml
<CustomField>
    <fullName>Ch_G_Succession__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Written executive succession plan to ensure that programs remain active despite changes in leadership.</description>
    <inlineHelpText>Written executive succession plan to ensure that programs remain active despite changes in leadership.</inlineHelpText>
    <label>Ch-G Succession</label>
    <type>Checkbox</type>
</CustomField>