force-app/main/default/objects/Benchmark__c/fields/Ch_GOV_To_Do__c.field-meta.xml
<CustomField>
    <fullName>Ch_GOV_To_Do__c</fullName>
    <description>Number of Change Leader-Level Governance Benchmarks (of 3) Not Yet Demonstrated</description>
    <formula>3 - (IF(Ch_G_10_years__c, 1, 0) +
IF(Ch_G_Stakeholders_in_Strategic__c, 1, 0) +
IF(Ch_G_Succession__c, 1, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of Change Leader-Level Governance Benchmarks (of 3) Not Yet Demonstrated</inlineHelpText>
    <label>Ch GOV To-Do (3)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>