force-app/main/default/objects/Benchmark__c/fields/Ch_O_Equitable_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Ch_O_Equitable_Allocation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Manage equitable allocation. Data is shared across multiple networks to shift services and re-allocate of diapers via partner agencies in order to serve the region in a more equitable manner.</description>
    <inlineHelpText>Manage equitable allocation. Data is shared across multiple networks to shift services and re-allocate of diapers via partner agencies in order to serve the region in a more equitable manner.</inlineHelpText>
    <label>Ch-O Equitable Allocation</label>
    <type>Checkbox</type>
</CustomField>