force-app/main/default/objects/Benchmark__c/fields/Ch_O_Evaluate_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Ch_O_Evaluate_Outcomes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Organization has developed or adopted a mechanism for ongoing evaluation measuring success in achieving targeted population-based outcomes.</description>
    <inlineHelpText>Organization has developed or adopted a mechanism for ongoing evaluation measuring success in achieving targeted population-based outcomes.</inlineHelpText>
    <label>Ch-O Evaluate Outcomes</label>
    <type>Checkbox</type>
</CustomField>