force-app/main/default/objects/Benchmark__c/fields/Ch_O_Expand_Geographic__c.field-meta.xml
<CustomField>
    <fullName>Ch_O_Expand_Geographic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Able to expand geographic reach while maintaining outcomes.</description>
    <inlineHelpText>Able to expand geographic reach while maintaining outcomes.</inlineHelpText>
    <label>Ch-O Expand Geographic</label>
    <type>Checkbox</type>
</CustomField>