force-app/main/default/objects/Benchmark__c/fields/Ch_OPS_To_Do__c.field-meta.xml
<CustomField>
    <fullName>Ch_OPS_To_Do__c</fullName>
    <description>Number of Change Leader-Level Operations Benchmarks (of 3) Not Yet Demonstrated</description>
    <formula>3 - (IF(Ch_O_Equitable_Allocation__c, 1, 0) +
IF(Ch_O_Evaluate_Outcomes__c, 1, 0) +
IF(Ch_O_Expand_Geographic__c, 1, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of Change Leader-Level Operations Benchmarks (of 3) Not Yet Demonstrated</inlineHelpText>
    <label>Ch OPS To-Do (3)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>