force-app/main/default/objects/Benchmark__c/fields/Em_A_Advocacy_Areas_3__c.field-meta.xml
<CustomField>
    <fullName>Em_A_Advocacy_Areas_3__c</fullName>
    <description>Auto Check box if member survey listed 2 or more (out of 15) advocacy areas active.
Formulated from Salesforce field &quot;benchmark advocacy areas count&quot;</description>
    <formula>BAQ_Advocacy_Areas_Count__c  &gt;= 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto Check box if member survey listed 2 or more (out of 15) advocacy areas active.</inlineHelpText>
    <label>Em-A Advocacy Areas(3)</label>
    <type>Checkbox</type>
</CustomField>