force-app/main/default/objects/Benchmark__c/fields/Em_A_Collab_with_CBOs__c.field-meta.xml
<CustomField>
    <fullName>Em_A_Collab_with_CBOs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The organization engages in strategic collaboration with community-based organizations beyond diaper distribution partners.</description>
    <inlineHelpText>The organization engages in strategic collaboration with community-based organizations beyond diaper distribution partners.</inlineHelpText>
    <label>Em-A Collab with CBOs</label>
    <type>Checkbox</type>
</CustomField>