force-app/main/default/objects/Benchmark__c/fields/Em_ADV_To_Do__c.field-meta.xml
<CustomField>
    <fullName>Em_ADV_To_Do__c</fullName>
    <description>Number of Emerging-Level Advocacy Benchmarks (of 2) Not Yet Demonstrated</description>
    <formula>2 - (IF(Em_A_Advocacy_Areas_3__c, 1, 0) +
IF(Em_A_Collab_with_CBOs__c, 1, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of Emerging-Level Advocacy Benchmarks (of 2) Not Yet Demonstrated</inlineHelpText>
    <label>Em ADV To-Do (2)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>