force-app/main/default/objects/Benchmark__c/fields/Em_Bench_To_Do__c.field-meta.xml
<CustomField>
    <fullName>Em_Bench_To_Do__c</fullName>
    <description>Total Number of Established-Level Benchmarks (of 16) Not Yet Demonstrated</description>
    <formula>Em_GOV_To_Do__c +
Em_OPS_To_Do__c +
Em_FUN_To_Do__c +
Em_ADV_To_Do__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Number of Established-Level Benchmarks (of 16) Not Yet Demonstrated</inlineHelpText>
    <label>ESTABLISHED LEVEL BENCHMARKS TO-DO (16)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>