force-app/main/default/objects/Benchmark__c/fields/Em_F_Acquisition_Plan__c.field-meta.xml
<CustomField>
    <fullName>Em_F_Acquisition_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A method to forecast need and an acquisition strategy are utilized.</description>
    <inlineHelpText>A method to forecast need and an acquisition strategy are utilized.</inlineHelpText>
    <label>Em-F Acquisition Plan</label>
    <type>Checkbox</type>
</CustomField>