force-app/main/default/objects/Benchmark__c/fields/Em_F_Budget_Scale__c.field-meta.xml
<CustomField>
    <fullName>Em_F_Budget_Scale__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The budget correlates with program scope and scale, including line-item detail and board approval.</description>
    <inlineHelpText>The budget correlates with program scope and scale, including line-item detail and board approval.</inlineHelpText>
    <label>Em-F Budget Scale</label>
    <type>Checkbox</type>
</CustomField>