force-app/main/default/objects/Benchmark__c/fields/Em_F_Development_Areas_3__c.field-meta.xml
<CustomField>
    <fullName>Em_F_Development_Areas_3__c</fullName>
    <description>Auto Check box if member survey listed 3 or more (out of 9) development areas active.
Formulated from Salesforce field &quot;benchmark development areas count&quot;</description>
    <formula>BAQ_Development_Areas_Count__c  &gt;= 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto Check box if member survey listed 3 or more (out of 9) development areas active.
Formulated from Salesforce field &quot;benchmark development areas count&quot;</inlineHelpText>
    <label>Em-F Development Areas (3)</label>
    <type>Checkbox</type>
</CustomField>