force-app/main/default/objects/Benchmark__c/fields/Em_F_Individ_donors__c.field-meta.xml
<CustomField>
    <fullName>Em_F_Individ_donors__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The program is supported by multiple funders, with no individual contributing more than 20%</description>
    <inlineHelpText>The program is supported by multiple funders, with no individual contributing more than 20%</inlineHelpText>
    <label>Em-F Individ donors</label>
    <type>Checkbox</type>
</CustomField>