force-app/main/default/objects/Benchmark__c/fields/Em_F_Multi_Yr_Fund_Plan__c.field-meta.xml
<CustomField>
    <fullName>Em_F_Multi_Yr_Fund_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A Multi-year fundraising plan sets goals and activities (3-5 years).</description>
    <inlineHelpText>A Multi-year fundraising plan sets goals and activities (3-5 years).</inlineHelpText>
    <label>Em-F Multi Yr Fund Plan</label>
    <type>Checkbox</type>
</CustomField>