force-app/main/default/objects/Benchmark__c/fields/Em_FUN_To_Do__c.field-meta.xml
<CustomField>
    <fullName>Em_FUN_To_Do__c</fullName>
    <description>Number of Emerging-Level Fundraising and Finance Benchmarks (of 5) Not Yet Demonstrated</description>
    <formula>5 - (IF(Em_F_Acquisition_Plan__c, 1, 0) +
IF(Em_F_Budget_Scale__c, 1, 0) +
IF(Em_F_Development_Areas_3__c, 1, 0) +
IF(Em_F_Individ_donors__c, 1, 0) +
IF(Em_F_Multi_Yr_Fund_Plan__c, 1, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of Emerging-Level Fundraising and Finance Benchmarks (of 5) Not Yet Demonstrated</inlineHelpText>
    <label>Em FUN To-Do (5)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>