force-app/main/default/objects/Benchmark__c/fields/Em_G_Guidestar__c.field-meta.xml
<CustomField>
    <fullName>Em_G_Guidestar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Organization has a Guidestar profile with appropriate tax forms (990 forms).</description>
    <inlineHelpText>Organization has a Guidestar profile with appropriate tax forms (990 forms).</inlineHelpText>
    <label>Em-G Guidestar</label>
    <type>Checkbox</type>
</CustomField>