force-app/main/default/objects/Benchmark__c/fields/Em_G_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Em_G_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Adequate insurance is secured (must include, at minimum, Directors and Officers).</description>
    <inlineHelpText>Adequate insurance is secured (must include, at minimum, Directors and Officers).</inlineHelpText>
    <label>Em-G Insurance</label>
    <type>Checkbox</type>
</CustomField>