force-app/main/default/objects/Benchmark__c/fields/Em_G_Multi_Yr_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Em_G_Multi_Yr_Strategy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Multi-year strategic planning has begun (3-5 years).</description>
    <inlineHelpText>Multi-year strategic planning has begun (3-5 years).</inlineHelpText>
    <label>Em-G Multi Yr Strategy</label>
    <type>Checkbox</type>
</CustomField>