force-app/main/default/objects/Benchmark__c/fields/Em_G_Nonprofit_Status__c.field-meta.xml
<CustomField>
    <fullName>Em_G_Nonprofit_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Nonprofit status: Members must be 501c3 nonprofit organizations or fiscally sponsored by a 501c3 nonprofit organization.</description>
    <inlineHelpText>Nonprofit status: Members must be 501c3 nonprofit organizations or fiscally sponsored by a 501c3 nonprofit organization.</inlineHelpText>
    <label>Em-G Nonprofit Status</label>
    <type>Checkbox</type>
</CustomField>