force-app/main/default/objects/Benchmark__c/fields/Em_O_50_Diapers__c.field-meta.xml
<CustomField>
    <fullName>Em_O_50_Diapers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Children served are provided at least 50 diapers per month (for at least 90% of agencies or client-recipients serviced).</description>
    <inlineHelpText>Children served are provided at least 50 diapers per month (for at least 90% of agencies or client-recipients serviced).</inlineHelpText>
    <label>Em-O 50 Diapers</label>
    <type>Checkbox</type>
</CustomField>