force-app/main/default/objects/Benchmark__c/fields/Em_O_Data_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Em_O_Data_Compliance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Partner agencies are compliant in data collection as requested. For direct service, client data is managed to protect privacy while supporting program measurements.</description>
    <inlineHelpText>Partner agencies are compliant in data collection as requested. For direct service, client data is managed to protect privacy while supporting program measurements.</inlineHelpText>
    <label>Em-O Data Compliance</label>
    <type>Checkbox</type>
</CustomField>