force-app/main/default/objects/Benchmark__c/fields/Em_O_Eligibility_Policy__c.field-meta.xml
<CustomField>
    <fullName>Em_O_Eligibility_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A selection strategy has been established for potential partner agencies and is readily available. For direct service, eligibility criteria is made available to the public.</description>
    <inlineHelpText>A selection strategy has been established for potential partner agencies and is readily available. For direct service, eligibility criteria is made available to the public.</inlineHelpText>
    <label>Em-O Eligibility Policy</label>
    <type>Checkbox</type>
</CustomField>