force-app/main/default/objects/Benchmark__c/fields/Em_O_Nonres_Storage__c.field-meta.xml
<CustomField>
    <fullName>Em_O_Nonres_Storage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Non-residential storage site is owned, leased or regularly accessible to key staff.</description>
    <inlineHelpText>Non-residential storage site is owned, leased or regularly accessible to key staff.</inlineHelpText>
    <label>Em-O Nonres Storage</label>
    <type>Checkbox</type>
</CustomField>