force-app/main/default/objects/Benchmark__c/fields/Em_OPS_To_Do__c.field-meta.xml
<CustomField>
    <fullName>Em_OPS_To_Do__c</fullName>
    <description>Number of Emerging-Level Operations Benchmarks (of 4) Not Yet Demonstrated</description>
    <formula>4 - (IF(Em_O_50_Diapers__c, 1, 0) +
IF(Em_O_Data_Compliance__c, 1, 0) +
IF(Em_O_Eligibility_Policy__c, 1, 0) +
IF(Em_O_Nonres_Storage__c, 1, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of Emerging-Level Operations Benchmarks (of 4) Not Yet Demonstrated</inlineHelpText>
    <label>Em OPS To-Do (4)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>