force-app/main/default/objects/Benchmark__c/fields/Ex_A_Advocacy_Areas_2__c.field-meta.xml
<CustomField>
    <fullName>Ex_A_Advocacy_Areas_2__c</fullName>
    <description>Auto Check box if member survey listed 2 or more (out of 15) advocacy areas active.
Formulated from Salesforce field &quot;BAQ advocacy areas count&quot;</description>
    <formula>BAQ_Advocacy_Areas_Count__c  &gt;= 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto Check box if member survey listed 2 or more (out of 15) advocacy areas active.</inlineHelpText>
    <label>Ex-A Advocacy Areas (2)</label>
    <type>Checkbox</type>
</CustomField>