force-app/main/default/objects/Benchmark__c/fields/Ex_A_Awareness__c.field-meta.xml
<CustomField>
    <fullName>Ex_A_Awareness__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Member actively raises awareness about diaper need.</description>
    <inlineHelpText>Member actively raises awareness about diaper need.</inlineHelpText>
    <label>Ex-A Awareness</label>
    <type>Checkbox</type>
</CustomField>