force-app/main/default/objects/Benchmark__c/fields/Ex_A_Brand__c.field-meta.xml
<CustomField>
    <fullName>Ex_A_Brand__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Member agrees to represent NDBN, extending branding and messages, and understands how to properly do so.</description>
    <inlineHelpText>Member agrees to represent NDBN, extending branding and messages, and understands how to properly do so.</inlineHelpText>
    <label>Ex-A Brand</label>
    <type>Checkbox</type>
</CustomField>