force-app/main/default/objects/Benchmark__c/fields/Ex_ADV_To_Do__c.field-meta.xml
<CustomField>
    <fullName>Ex_ADV_To_Do__c</fullName>
    <description>Number of Exploring-Level Advocacy Benchmarks (of 3) Not Yet Demonstrated</description>
    <formula>3 - (IF(Ex_A_Advocacy_Areas_2__c, 1, 0) +
IF(Ex_A_Awareness__c, 1, 0) +
IF(Ex_A_Brand__c, 1, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of Exploring-Level Advocacy Benchmarks (of 3) Not Yet Demonstrated</inlineHelpText>
    <label>Ex ADV To-Do	 (3)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>