force-app/main/default/objects/Benchmark__c/fields/Ex_Bench_To_Do__c.field-meta.xml
<CustomField>
    <fullName>Ex_Bench_To_Do__c</fullName>
    <description>Total Number of Certified-Level Benchmarks (of 18) Not Yet Demonstrated</description>
    <formula>Ex_GOV_To_Do__c +
Ex_OPS_To_Do__c +
Ex_FUN_To_Do__c +
Ex_ADV_To_Do__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Number of Certified-Level Benchmarks (of 18) Not Yet Demonstrated</inlineHelpText>
    <label>CERTIFIED LEVEL BENCHMARKS TO DO (18)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>