force-app/main/default/objects/Benchmark__c/fields/Ex_F_Bank_Accounting__c.field-meta.xml
<CustomField>
    <fullName>Ex_F_Bank_Accounting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Basic accounting practices are employed, including a financial recording method and a bank account used exclusively for program funds.</description>
    <inlineHelpText>Basic accounting practices are employed, including a financial recording method and a bank account used exclusively for program funds.</inlineHelpText>
    <label>Ex-F Bank Accounting</label>
    <type>Checkbox</type>
</CustomField>