force-app/main/default/objects/Benchmark__c/fields/Ex_F_Basic_Budget__c.field-meta.xml
<CustomField>
    <fullName>Ex_F_Basic_Budget__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A basic budget has been created for the diaper program.</description>
    <inlineHelpText>A basic budget has been created for the diaper program.</inlineHelpText>
    <label>Ex-F Basic Budget</label>
    <type>Checkbox</type>
</CustomField>