force-app/main/default/objects/Benchmark__c/fields/Ex_F_Development_Areas_2__c.field-meta.xml
<CustomField>
    <fullName>Ex_F_Development_Areas_2__c</fullName>
    <description>Auto Check box if member survey listed 2 or more (out of 9) development areas active.
Formulated from Salesforce field &quot;BAQ development areas count&quot;</description>
    <formula>BAQ_Development_Areas_Count__c  &gt;= 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto Check box if member survey listed 2 or more (out of 9) development areas active.</inlineHelpText>
    <label>Ex-F Development Areas (2)</label>
    <type>Checkbox</type>
</CustomField>