force-app/main/default/objects/Benchmark__c/fields/Ex_F_Donation_Receipts__c.field-meta.xml
<CustomField>
    <fullName>Ex_F_Donation_Receipts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Receipts are provided for all donations.</description>
    <inlineHelpText>Receipts are provided for all donations.</inlineHelpText>
    <label>Ex-F Donation Receipts</label>
    <type>Checkbox</type>
</CustomField>