force-app/main/default/objects/Benchmark__c/fields/Ex_F_Fundraising_Plan__c.field-meta.xml
<CustomField>
    <fullName>Ex_F_Fundraising_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A basic fundraising plan sets goals and activities.</description>
    <inlineHelpText>A basic fundraising plan sets goals and activities.</inlineHelpText>
    <label>Ex-F Fundraising Plan</label>
    <type>Checkbox</type>
</CustomField>